Phase R3: rewrite README for portfolio quality
Replaces the old phased-implementation README with a portfolio-quality writeup:

- One-paragraph elevator pitch explaining what this repo demonstrates.
- Algorithm overview with a Mermaid sequence diagram (fork→poll→promote→join).
- Quick start commands including agent-instrumented example and benchmark run.
- Loom integration section summarising docs/loom-integration.md.
- PRC rewriter section with a before/after bytecode snippet showing poll insertion
  at method entry and loop backedge.
- Empirical verification section explaining BoundsBench and ComparativeBench and
  how to generate the W/w and scalability plots.
- Honest "what's done / what's not done" table.
- Configuration reference and future work appendix.
- Full references section.