@@ -1,323 +1,241 @@
 # Heartbeat Scheduling for Java
 
-A Java implementation of Heartbeat Scheduling using Virtual Threads (Project Loom).
+A working implementation of the Heartbeat Scheduling algorithm (Acar et al., PLDI 2018) in modern Java — runtime + Project Loom integration + an ASM-based bytecode rewriter that auto-inserts heartbeat polls (the paper's PRC transformation, ported to JVM tooling) — with empirical benchmarks designed to verify the (1 + τ/N) overhead bound on real workloads.
 
-## Overview
+---
 
-Heartbeat Scheduling is a provably efficient scheduling technique for nested parallel programs that delivers bounded
-overhead without manual tuning. This implementation uses Java 25+ virtual threads and continuations.
+## Why this exists
 
-### Key Features
+The [paper](https://www.andrew.cmu.edu/user/mrainey/papers/heartbeat.pdf) proves that a scheduler which "promotes" sequential continuations to parallel threads at a regular heartbeat interval delivers:
 
-- **Provable bounds**: Work overhead ≤ (1 + τ/N) × sequential work
-- **Preserved parallelism**: Span ≤ (1 + N/τ) × fully-parallel span
-- **No manual tuning**: Automatic granularity control
-- **Virtual threads**: Lightweight threading with millions of threads possible
-- **Continuation-based**: Explicit stack control via Project Loom
+- **Bounded work overhead**: W ≤ (1 + τ/N) × w
+- **Bounded span increase**: S ≤ (1 + N/τ) × s
 
-## Requirements
+where τ is the promotion cost, N is the heartbeat period, w is the sequential work, and s is the ideal-parallel span.  Setting N = 20τ gives 5% work overhead and a 21× span bound — no manual tuning required.
 
-- **Java 25 or later** (for virtual threads and Continuations API)
-- Maven 3.6+ (for building)
+The interesting part is that these guarantees require the compiled code to satisfy a structural property called *Promotion-Ready Code* (PRC): every execution path of length N must contain a poll point.  Most implementations leave the poll insertion as an exercise; this repo implements it as a Java agent that rewrites bytecode at load time.
 
-## Building
+---
+
+## Algorithm overview
+
+```mermaid
+sequenceDiagram
+    participant App as Application thread
+    participant HB as HeartbeatContext
+    participant PT as PromotionTracker
+    participant VT as Virtual Thread (Loom)
+
+    App->>PT: fork(child) — push PromotionPoint
+    loop At every poll point (method entry / loop backedge)
+        App->>HB: checkHeartbeat()
+        alt N nanoseconds have elapsed since last promotion
+            HB-->>App: true
+            App->>PT: promoteOldest() — pop oldest frame
+            App->>VT: executor.promoteTask(oldest)
+            Note over VT: Loom schedules on carrier pool
+        else Timer not yet elapsed
+            HB-->>App: false — continue sequential
+        end
+    end
+    App->>App: join(child)
+    alt child was promoted
+        App-->>VT: CompletableFuture.get() — virtual thread parks
+    else child still sequential
+        App->>App: execute child inline
+    end
+    VT-->>App: result
+```
+
+The key insight: tasks start *sequential* and are promoted lazily only when the heartbeat fires.  Short computations finish before the first promotion and pay zero parallel overhead; long computations get distributed across carrier threads as work accumulates.
+
+---
+
+## Quick start
 
 ```bash
-mvn clean compile
-```
+# Requirements: Java 25+, Maven 3.6+
 
-## Running Tests
+# Build and run tests
+mvn clean test
 
-```bash
-mvn test
-```
-
-## Project Structure
-
-```
-src/main/java/org/heartbeat/scheduler
-├── core/               # Core scheduler components
-│   ├── HeartbeatConfig.java
-│   ├── HeartbeatTimer.java
-│   ├── HeartbeatContext.java
-│   ├── PollingStrategy.java
-│   ├── PromotionTracker.java
-│   ├── CountBasedPolling.java
-│   └── TimeBasedPolling.java
-├── vthread/            # Virtual thread support
-│   ├── ContinuationScope.java
-│   └── HeartbeatContinuation.java
-├── task/               # Task API
-│   └── HeartbeatTask.java
-├── sync/               # Synchronization primitives
-│   ├── JoinCounter.java
-│   └── PromotionPoint.java
-└── util/               # Utilities
-    └── TimingCalibration.java
-    └── SimpleCalibration.java
-```
-
-## What's implemented until now
-
-**Phase 1: Core Abstractions**
-
-- HeartbeatConfig with builder pattern
-- ContinuationScope wrapper
-- HeartbeatContinuation for yield/resume
-- HeartbeatTask base class
-- JoinCounter for fork-join coordination
-- PromotionPoint for tracking promotable frames
-
-**Phase 2: Timing and Polling**
-
-- HeartbeatTimer with calibration
-- PollingStrategy abstraction
-- CountBasedPolling implementation
-- TimeBasedPolling implementation
-- TimingCalibration utilities
-- HeartbeatContext for thread-local state
-
-**Phase 3: Frame Management**
-
-- PromotionTracker with doubly-linked list
-- O(1) push/pop/promote operations
-- Frame lifecycle management
-- Integration with HeartbeatContext
-- Statistics tracking
-
-**Phase 4: Basic Executor**
-
-- VirtualThreadExecutor for task execution
-- Fork/join implementation in HeartbeatTask
-- Actual promotion logic (frame → virtual thread)
-- Fibonacci benchmark example
-- Parallel sum benchmark example
-- Comprehensive integration tests
-
-## Configuration
-
-### Creating a Configuration
-
-```java
-// Default configuration (30μs heartbeat, 1.5μs promotion cost, 5% overhead)
-HeartbeatConfig config = HeartbeatConfig.newBuilder()
-                .build();
-
-// Custom configuration
-HeartbeatConfig config = HeartbeatConfig.newBuilder()
-        .heartbeatPeriodMicros(50)  // 50μs heartbeat
-        .promotionCostMicros(2)      // 2μs promotion cost
-        .numCarrierThreads(8)        // 8 platform threads
-        .enableStatistics(true)
-        .build();
-
-// Target specific overhead percentage
-HeartbeatConfig config = HeartbeatConfig.newBuilder()
-        .promotionCostMicros(2)
-        .targetOverheadPercent(3.0)  // 3% overhead (N = 100/3 * τ ≈ 67μs)
-        .build();
-```
-
-### Calibration
-
-```java
-// Run calibration to determine optimal parameters
-CalibrationResults results = TimingCalibration.calibrateAndPrint();
-
-// Use calibration results
-HeartbeatConfig config = HeartbeatConfig.newBuilder()
-        .promotionCostNanos(results.promotionCost)
-        .heartbeatPeriodNanos(results.recommendedHeartbeatPeriod)
-        .build();
-```
-
-## Usage
-
-### Basic Example
-
-```java
-// Configure the scheduler
-HeartbeatConfig config = HeartbeatConfig.newBuilder()
-                .targetOverheadPercent(5.0)  // 5% overhead
-                .build();
-
-// Create executor
-VirtualThreadExecutor executor = new VirtualThreadExecutor(config);
-
-// Define a task
-HeartbeatTask<Integer> task = new HeartbeatTask<>() {
-    @Override
-    protected Integer compute() {
-        return 42;
-    }
-};
-
-// Execute and get result
-Integer result = executor.submit(task);
-System.out.
-
-println("Result: "+result);
-
-executor.
-
-shutdown();
-```
-
-### Fork-Join Example
-
-```java
-// Recursive Fibonacci with fork-join
-class FibTask extends HeartbeatTask<Long> {
-    private final int n;
-
-    FibTask(int n) {
-        this.n = n;
-    }
-
-    @Override
-    protected Long compute() {
-        if (n <= 1) return (long) n;
-
-        FibTask f1 = new FibTask(n - 1);
-        FibTask f2 = new FibTask(n - 2);
-
-        fork(f1);  // May be promoted to parallel
-        fork(f2);
-
-        return join(f1) + join(f2);
-    }
-}
-
-// Execute
-VirtualThreadExecutor executor = new VirtualThreadExecutor(config);
-Long result = executor.submit(new FibTask(20));
-System.out.
-
-println("Fib(20) = "+result);
-```
-
-### Parallel Array Sum
-
-```java
-class SumTask extends HeartbeatTask<Long> {
-    private final int[] array;
-    private final int start, end, threshold;
-
-    SumTask(int[] array, int start, int end, int threshold) {
-        this.array = array;
-        this.start = start;
-        this.end = end;
-        this.threshold = threshold;
-    }
-
-    @Override
-    protected Long compute() {
-        if (end - start <= threshold) {
-            // Base case: sequential sum
-            long sum = 0;
-            for (int i = start; i < end; i++) {
-                sum += array[i];
-            }
-            return sum;
-        }
-
-        // Divide and conquer
-        int mid = (start + end) / 2;
-        SumTask left = new SumTask(array, start, mid, threshold);
-        SumTask right = new SumTask(array, mid, end, threshold);
-
-        fork(left);
-        fork(right);
-
-        return join(left) + join(right);
-    }
-}
-```
-
-## Running Examples
-
-Each example needs `--add-exports java.base/jdk.internal.vm=ALL-UNNAMED`
-on the JVM command line so the runtime can reach `jdk.internal.vm.Continuation`.
-
-```bash
-# Compile
-mvn clean compile
-
-# Recursive Fibonacci with heartbeat fork/join (default n=20)
+# Run the Fibonacci example (n=35)
 java --add-exports java.base/jdk.internal.vm=ALL-UNNAMED \
-    -cp target/classes \
-    org.heartbeat.scheduler.examples.FibonacciExample 20
+     -cp target/classes \
+     org.heartbeat.scheduler.examples.FibonacciExample 35
 
-# Parallel range reduction with a CPU-bound LCG kernel
+# Run the same example with the PRC agent — no manual poll calls in user code
+mvn package -DskipTests
 java --add-exports java.base/jdk.internal.vm=ALL-UNNAMED \
-    -cp target/classes \
-    org.heartbeat.scheduler.examples.ParallelSumExample 1000000 10000
+     -javaagent:target/heartbeat-scheduler-0.1.0-SNAPSHOT-agent.jar \
+     -cp target/classes \
+     org.heartbeat.scheduler.examples.FibonacciExample 35
 
-# Same reduction with a deliberately skewed (1:9) split
-java --add-exports java.base/jdk.internal.vm=ALL-UNNAMED \
-    -cp target/classes \
-    org.heartbeat.scheduler.examples.RecursiveSumExample 1000000 10000
+# Run benchmarks (generates docs/results/jmh-results.json)
+mvn test-compile exec:java -Pbenchmarks
+
+# Generate result plots (requires: pip install matplotlib)
+python scripts/plot-results.py docs/results/jmh-results.json
 ```
 
-## Implementation Details
+---
 
-### Heartbeat Algorithm
+## Project Loom integration
 
-The core heartbeat mechanism:
+Virtual threads (Project Loom) serve two roles here:
 
-1. **Sequential execution**: Parallel calls initially execute sequentially using stack frames
-2. **Periodic polling**: Check heartbeat timer at regular intervals
-3. **Promotion**: When timer expires (elapsed ≥ N), promote oldest parallel frame to virtual thread
-4. **Load balancing**: Virtual threads scheduled on carrier threads with work-stealing
+1. **Promoted tasks** run as virtual threads scheduled on a `ForkJoinPool` of carrier platform threads.
+2. **Blocking joins** (a parent waiting for a promoted child's `CompletableFuture`) unmount the virtual thread from its carrier, freeing the carrier to execute other tasks.
 
-### Theoretical Guarantees
+We deliberately delegate work-stealing to Loom's carrier scheduler rather than implementing a custom Chase-Lev deque.  This gives us a production-quality, battle-tested work distributor at the cost of some control over task locality.
 
-For heartbeat period N and promotion cost τ:
+Key design notes are in [`docs/loom-integration.md`](docs/loom-integration.md):
+pinning behaviour, safepoint interaction, JIT inlining of `checkHeartbeat()`, and the tradeoff between control and simplicity.
 
-- **Work bound**: W ≤ (1 + τ/N) × w
-    - Example: N = 20τ → overhead = 5%
+---
 
-- **Span bound**: S ≤ (1 + N/τ) × s
-    - Example: N = 20τ → span increase = 21×
+## PRC bytecode rewriter
 
-### Virtual Threads Benefits
+The paper's compile-time transformation — inserting poll points so that every execution path of length N contains at least one check — is implemented as a Java agent in [`src/main/java/org/heartbeat/scheduler/agent/`](src/main/java/org/heartbeat/scheduler/agent/).
 
-- **Lightweight**: Millions of virtual threads possible
-- **Natural stack management**: JVM manages continuation stacks
-- **Graceful blocking**: Virtual thread blocking doesn't block carrier
-- **Mature implementation**: Built into Java 21+
+**How it works:**
 
-## Testing
+1. The agent attaches via `java.lang.instrument` and registers a `ClassFileTransformer`.
+2. For each class loaded at runtime, it scans for methods annotated with `@Parallel`.
+3. For each `@Parallel` method, `PrcRewriter` (built on ObjectWeb ASM) inserts an
+   `INVOKESTATIC HeartbeatContext.checkHeartbeatStatic()` call at:
+   - **Method entry** — the first basic block always polls before doing real work.
+   - **Loop backedges** — identified via dominator-tree analysis (`BackedgeAnalyzer`):
+     edge (u → v) is a backedge iff v dominates u in the CFG.
 
-Run all tests with coverage:
+**Before / after example** — a `@Parallel` method with a loop:
+
+```
+// Before instrumentation
+ICONST_0        // i = 0
+ISTORE_1
+ILOAD_1         // ← loop header (target of backedge)
+ILOAD_2
+IF_ICMPGE L2    // exit if i >= limit
+... loop body ...
+IINC 1 1        // i++
+GOTO L1         // backedge
+
+// After PRC rewriting
+INVOKESTATIC HeartbeatContext.checkHeartbeatStatic()Z  // ← entry poll
+POP
+ICONST_0
+ISTORE_1
+ILOAD_1         // ← loop header
+ILOAD_2
+IF_ICMPGE L2
+... loop body ...
+IINC 1 1
+INVOKESTATIC HeartbeatContext.checkHeartbeatStatic()Z  // ← backedge poll
+POP
+GOTO L1
+```
+
+`ClassWriter.COMPUTE_FRAMES` regenerates `StackMapTable` entries automatically, avoiding the most common bytecode-rewriting pitfall.
+
+Full design rationale in [`docs/prc-rewriter.md`](docs/prc-rewriter.md).
+
+---
+
+## Empirical verification
+
+### Why backedges + method entries suffice
+
+The paper proves (§3) that inserting polls at loop backedges and recursive call sites is sufficient to make code PRC.  Every cycle in the CFG passes through a backedge; every recursive descent passes through a method entry.  Any execution path of length N must traverse one of these points.
+
+### Running the bounds sweep
+
+`BoundsBench` sweeps N over {2τ, 5τ, 10τ, 20τ, 50τ, 100τ} where τ is measured at trial setup via `TimingCalibration.estimateVirtualThreadCost()`.  Both heartbeat and sequential Fibonacci(30) are benchmarked at each point.  The ratio heartbeat_time / sequential_time is a direct proxy for W/w (on a single carrier, wall-clock = CPU work).
 
 ```bash
-mvn clean test jacoco:report
+mvn test-compile exec:java -Pbenchmarks \
+  -Dexec.args="BoundsBench -rf json -rff docs/results/bounds.json"
+
+python scripts/plot-results.py docs/results/bounds.json --type bounds
+# → docs/results/bounds-verification.png
 ```
 
-View coverage report: `target/site/jacoco/index.html`
+The expected shape: data points should cluster on or below the line y = 1 + τ/N.
+With small N (N = 2τ, theoretical 50% overhead) points are above y = 1 by ~50%.
+With large N (N = 100τ, theoretical 1% overhead) points converge toward y = 1.
 
-## Next Steps
+### Scalability curves
 
-### Phase 4: Basic Executor
+`ComparativeBench` compares heartbeat vs `ForkJoinPool` vs sequential on Fibonacci(35)
+across carrier-thread counts {1, 2, 4, 8}:
 
-- Single-threaded executor
-- Frame promotion logic
-- Simple fork/join support
+```bash
+mvn test-compile exec:java -Pbenchmarks \
+  -Dexec.args="ComparativeBench -rf json -rff docs/results/comparative.json"
+
+python scripts/plot-results.py docs/results/comparative.json --type scalability
+# → docs/results/scalability.png
+```
+
+> **Results are generated locally** — run the commands above to produce the plots.
+> The scripts are ready; the `docs/results/` directory holds the output.
+
+---
+
+## What's done / what's not
+
+| Component | Status |
+|---|---|
+| Core runtime (Phases 1–4): HeartbeatConfig, HeartbeatTimer, PollingStrategy, PromotionTracker, VirtualThreadExecutor | ✅ done |
+| 15 correctness fixes: task reference in PromotionPoint, race-free join, AutoCloseable shutdown, configurable polling, cached JDK scope | ✅ done |
+| Example programs: FibonacciExample, ParallelSumExample, RecursiveSumExample | ✅ done |
+| PRC bytecode rewriter: BackedgeAnalyzer, PrcRewriter, PrcAgent, PrcClassTransformer | ✅ done |
+| @Parallel / @HeartbeatPoll annotations | ✅ done |
+| JFR custom events: PromotionEvent, PollCheckEvent, JoinBlockedEvent | ✅ done |
+| JFR visualizer: scripts/visualize-jfr.py | ✅ done |
+| JMH benchmark suite: FibBench, QuicksortBench, MatmulBench, BfsBench | ✅ done |
+| Bounds-verification benchmark (BoundsBench, τ/N sweep) | ✅ done |
+| Comparative benchmark harness (ComparativeBench) | ✅ done |
+| Result plotting: scripts/plot-results.py | ✅ done |
+| Custom Chase-Lev work-stealing deque | ❌ not done (delegated to Loom — see docs/loom-integration.md) |
+| DSL frontend (Cilk-Lite surface language) | ❌ not done (sketched in §9 of PORTFOLIO_PLAN.md) |
+| Annotation processor (AOT path) | ❌ not done (agent path is sufficient; AOT deferred) |
+
+---
+
+## Configuration reference
+
+```java
+HeartbeatConfig config = HeartbeatConfig.newBuilder()
+    .heartbeatPeriodMicros(30)   // N — time between promotions (μs)
+    .promotionCostMicros(2)      // τ — estimated virtual-thread creation cost
+    .numCarrierThreads(8)        // hint — actual carrier count depends on Loom
+    .pollingStrategyFactory(() -> TimeBasedPolling.forHeartbeatPeriod(30_000))
+    .enableStatistics(true)
+    .build();
+
+// Or target a specific overhead percentage (computes N = (100/k) × τ):
+HeartbeatConfig config = HeartbeatConfig.newBuilder()
+    .promotionCostMicros(2)
+    .targetOverheadPercent(5.0)  // N = 20τ = 40μs
+    .build();
+```
+
+---
+
+## Future work
+
+- **DSL frontend** — a Cilk-Lite surface language compiled to the heartbeat runtime would push the repo from "compiler-adjacent" into a full compiler pipeline (parser → AST → type-checker → bytecode codegen via ASM).
+- **Deeper Loom inspection** — JIT inlining of `checkHeartbeat()` via `-XX:+PrintInlining`, `@Contended` annotations on hot fields, `ScopedValue` migration once GA.
+- **Annotation processor** — AOT path: the same PRC transformation run at `javac` time rather than agent time.
+- **Phases 5/6 from the original plan** — a custom Chase-Lev work-stealing deque (lock-free data structures practice) and a `parallelFor` API.
+
+---
 
 ## References
 
-- [Heartbeat Scheduling Paper](https://www.andrew.cmu.edu/user/mrainey/papers/heartbeat.pdf)
-- [Project Loom](https://openjdk.org/projects/loom/)
-- [Virtual Threads (JEP 444)](https://openjdk.org/jeps/444)
-
-## License
-
-This is an educational implementation of the Heartbeat Scheduling algorithm.
-
-## Authors
-
-Implementation based on the paper:
-*Heartbeat Scheduling: Provable Efficiency for Nested Parallelism*  
-Umut A. Acar, Arthur Charguéraud, Adrien Guatto, Mike Rainey, Filip Sieczkowski  
-PLDI 2018
+- Acar, Charguéraud, Guatto, Rainey, Sieczkowski. *Heartbeat Scheduling: Provably Efficient Nested Parallelism*. PLDI 2018. [[PDF]](https://www.andrew.cmu.edu/user/mrainey/papers/heartbeat.pdf)
+- JEP 444: Virtual Threads. [[link]](https://openjdk.org/jeps/444)
+- JEP 451: Prepare to Disallow the Dynamic Loading of Agents. [[link]](https://openjdk.org/jeps/451)
+- ObjectWeb ASM. [[docs]](https://asm.ow2.io/)
+- JMH — Java Microbenchmark Harness. [[link]](https://github.com/openjdk/jmh)
